--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run: yarn config set ignore-engines true
       - run: yarn install --frozen-lockfile
-      - run: yarn test
+      - run: yarn lint
       - run: yarn build
